[B]Retrospect v5.4.3 - Changelog - 2021-07-12[/B]

This minor update contains some fixes for channels and introduces a new BVN.tv (Beste van NPO) channel for Dutch expats.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: SRF TV shows did not list and play (Fixes #1535)